--- a/media-queries.html
+++ b/media-queries.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Media Queries</title>
     <link rel="stylesheet" href="css/media-queries.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/fcb4677551.js" crossorigin="anonymous"></script>    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div class="alert-info hidden-on-desktop">
@@ -33,6 +33,11 @@
     <footer>
         <p>(c) 2017 All rights reserved</p>
         <div id="social-media-links">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-x-twitter"></i>
+            <i class="fa-solid fa-phone"></i>
+            <i class="fa-regular fa-envelope"></i>
         </div>
     </footer>
 </body>
